# token

./: Cargo.toml  LICENSE  README.md
proposals/: .gitignore  README.md  airdrop.json  policy.json  register.js  token-testnet.json  token.json
res/: shrm_token.wasm
src/: errors.rs  lib.rs
