[package]
name = "shrm-token"
version = "1.0.0"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"

[dev-dependencies]
near-primitives = "0.1.0-pre.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
